deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tapp-app
  namespace: default # 💡 올바른 위치 (문서 최상단 metadata 바로 아래)
  labels:
    app: tapp-app
spec:
  replicas: 1 # 일단 1대로 띄웁니다
  selector:
    matchLabels:
      app: tapp-app
  template:
    metadata:
      labels:
        app: tapp-app
    spec:
      containers:
      - name: tapp-app
        # 사용자님의 ECR 이미지 주소
        image: 003493200358.dkr.ecr.ap-northeast-2.amazonaws.com/tapp-app:latest
        ports:
        - containerPort: 8080
