ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tapp-ingress
  namespace: default # 💡 올바른 위치 (문서 최상단 metadata 바로 아래)
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
  # - host: ingcloud.cloud 주석 처리!
  - http: # 💡 여기에 하이픈(-)을 넣어 배열의 시작임을 알려줍니다.
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tapp-service
            port:
              number: 80
